<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="50dp"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context="com.darwinlabs.darwintask.Send">
    <LinearLayout
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_weight=".1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="AMOUNT"
                android:textColor="@color/textGrey"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>
            <TextView
                android:text="0.0 ETH"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <TextView
            android:layout_weight=".1"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_marginRight="20dp"
            android:text="= 0.0 USD"
            android:textSize="18sp"
            android:textColor="@color/textBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            ></View>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/drop_shadow"></View>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableLayout
                android:id="@+id/keyboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:divider="@drawable/keyboard_divider"
                android:orientation="vertical"
                android:showDividers="beginning|middle|end">

                <TableRow style="@style/keyboard_row">

                    <TextView
                        android:id="@+id/t9_key_1"
                        style="@style/keyboard_number_button"
                        android:text="@string/number_one"/>

                    <TextView
                        android:id="@+id/t9_key_2"
                        style="@style/keyboard_number_button"
                        android:text="@string/number_two"/>

                    <TextView
                        android:id="@+id/t9_key_3"
                        style="@style/keyboard_number_button"
                        android:text="@string/number_three"/>
                </TableRow>

                <TableRow style="@style/keyboard_row">

                    <TextView
                        android:id="@+id/t9_key_4"
                        style="@style/keyboard_number_button"
                        android:text="@string/number_four"/>

                    <TextView
                        android:id="@+id/t9_key_5"
                        style="@style/keyboard_number_button"
                        android:text="@string/number_five"/>

                    <TextView
                        android:id="@+id/t9_key_6"
                        style="@style/keyboard_number_button"
                        android:text="@string/number_six"/>
                </TableRow>

                <TableRow style="@style/keyboard_row">

                    <TextView
                        android:id="@+id/t9_key_7"
                        style="@style/keyboard_number_button"
                        android:text="@string/number_seven"/>

                    <TextView
                        android:id="@+id/t9_key_8"
                        style="@style/keyboard_number_button"
                        android:text="@string/number_eight"/>

                    <TextView
                        android:id="@+id/t9_key_9"
                        style="@style/keyboard_number_button"
                        android:text="@string/number_nine"/>
                </TableRow>

                <TableRow style="@style/keyboard_row">

                    <ImageView
                        android:src="@drawable/backspace"
                        android:id="@+id/t9_key_clear"
                        style="@style/keyboard_button"
                        android:scaleType="center"
                        android:text="@string/btn_clear"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:id="@+id/t9_key_0"
                        style="@style/keyboard_number_button"
                        android:text="@string/number_zero"/>

                    <TextView
                        android:id="@+id/t9_key_backspace"
                        style="@style/keyboard_button"
                        android:textSize="42dp"
                        android:text="@string/btn_dot"
                        />
                </TableRow>
            </TableLayout>

            <ImageButton
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@drawable/forwardchevron"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
